--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
 
       </ul>
@@ -49,7 +49,8 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">Bio</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consectetur! Consequatur
+        <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
+        <p class="card-text"><img id="headShot" src="./Images/Head shot 25%.jpg" alt=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consectetur! Consequatur
           fuga temporibus aperiam quia deserunt. Tempora ipsa ratione obcaecati explicabo dolor quibusdam, in, animi
           asperiores nisi numquam dolore id.</p>
       </div>
