--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,10 @@
     <h1>Portfolio</h1>
   <div class="row">
     <div class="column">
-      <img
+      <a href="https://www.google.com"><img
         src="https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </div>
+    </a>
+  </div>
     <div class="column">
       <img
         src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
