--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
     <h1>Portfolio</h1>
   <div class="row">
     <div class="column">
-      <a href="https://www.google.com"><img
+      <a href="https://burtonpinckney.github.io/HW3/"><img
         src="https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
     </a>
   </div>
