--- a/portfolio.html
+++ b/portfolio.html
@@ -43,34 +43,39 @@
 
   <div class="container">
     <h1>Portfolio</h1>
-  <div class="row">
-    <div class="column">
-      <a href="https://burtonpinckney.github.io/HW3/"><img
-        src="https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </a>
-  </div>
-    <div class="column">
-      <img
-        src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+    <div class="row">
+      <div class="column">
+        <a href="https://burtonpinckney.github.io/HW3/">
+          <img
+            src="https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://burtonpinckney.github.io/unit-4-game/">
+        <img
+          src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          </a>
+        </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <img
+          src="https://images.pexels.com/photos/417142/pexels-photo-417142.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      </div>
+      <div class="column">
+        <img
+          src="https://images.pexels.com/photos/236230/pexels-photo-236230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <img
+          src="https://images.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      </div>
+      <div class="column">
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="column">
-      <img src="https://images.pexels.com/photos/417142/pexels-photo-417142.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </div>
-    <div class="column">
-      <img src="https://images.pexels.com/photos/236230/pexels-photo-236230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </div>
-  </div>
-  <div class="row">
-    <div class="column">
-      <img
-        src="https://images.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </div>
-    <div class="column">
-    </div>
-  </div>
-</div>
 
   <div>
     <footer class="footer">
