Changed pictures and updated links to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,30 +47,32 @@
       <div class="column">
         <a href="https://burtonpinckney.github.io/HW3/">
           <img
-            src="https://images.pexels.com/photos/40756/lion-safari-afika-landscape-40756.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+            src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\PsychicGameImage.jpg">
+            <h3>Psychic Game</h3> 
         </a>
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/unit-4-game/">
         <img
-          src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-          </a>
+          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\CrystalGameImage.jpg">
+          <h3>Crystal Game</h3>
+        </a>
         </div>
     </div>
     <div class="row">
       <div class="column">
         <img
-          src="https://images.pexels.com/photos/417142/pexels-photo-417142.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
       </div>
       <div class="column">
         <img
-          src="https://images.pexels.com/photos/236230/pexels-photo-236230.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
       </div>
     </div>
     <div class="row">
       <div class="column">
         <img
-          src="https://images.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
       </div>
       <div class="column">
       </div>
