--- a/portfolio.html
+++ b/portfolio.html
@@ -46,23 +46,26 @@
     <div class="row">
       <div class="column">
         <a href="https://burtonpinckney.github.io/HW3/">
-          <img
+          <img class="portimage"
             src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\PsychicGameImage.jpg">
-            <h3>Psychic Game</h3> 
+            <h3 class="portlabel">Psychic Game</h3>
         </a>
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/unit-4-game/">
-        <img
+        <img class="portimage"
           src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\CrystalGameImage.jpg">
-          <h3>Crystal Game</h3>
+          <h3 class="portlabel">Crystal Game</h3>
         </a>
         </div>
     </div>
     <div class="row">
       <div class="column">
-        <img
-          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
+        <a href="https://burtonpinckney.github.io/Project_1A/">
+        <img class="portimage"
+          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Volunteer.png">
+          <h3 class="portlabel">Vol Tracker</h3>
+        </a>
       </div>
       <div class="column">
         <img
