Updated image settings

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,14 +47,14 @@
       <div class="column">
         <a href="https://burtonpinckney.github.io/HW3/">
           <img class="portimage"
-            src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\PsychicGameImage.jpg">
+            src="./Images/PsychicGameImage.jpg">
             <h3 class="portlabel">Psychic Game</h3>
         </a>
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/unit-4-game/">
         <img class="portimage"
-          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\CrystalGameImage.jpg">
+          src="./Images/CrystalGameImage.jpg">
           <h3 class="portlabel">Crystal Game</h3>
         </a>
         </div>
@@ -63,7 +63,7 @@
       <div class="column">
         <a href="https://burtonpinckney.github.io/Project_1A/">
         <img class="portimage"
-          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Volunteer.png">
+          src="./Images/Volunteer.png">
           <h3 class="portlabel">Vol Tracker</h3>
         </a>
       </div>
