--- a/portfolio.html
+++ b/portfolio.html
@@ -69,13 +69,13 @@
       </div>
       <div class="column">
         <img
-          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
+          src="./Images/Coming Soon.jpg">
       </div>
     </div>
     <div class="row">
       <div class="column">
         <img
-          src="C:\Users\17043\Desktop\Bootcamp\Bootcamp\Homework\Bootstrap-Portfolio\Images\Coming Soon.jpg">
+          src="./Images/Coming Soon.jpg">
       </div>
       <div class="column">
       </div>
