--- a/portfolio.html
+++ b/portfolio.html
@@ -68,10 +68,11 @@
         </a>
       </div>
       <div class="column">
-        <a href="https://burtonpinckney.github.io/Trivia-game/"></a>
+        <a href="https://burtonpinckney.github.io/Trivia-game/">
         <img
           src="./Images/PantherTrivia.jpg">
           <h3 class="portlabel">Trivia Game</h3>
+        </a>
       </div>
     </div>
     <div class="row">
