Added GifTastic to Portfolio. Adjusted main body box

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/Trivia-game/">
-        <img
+        <img class="portimage"
           src="./Images/PantherTrivia.jpg">
           <h3 class="portlabel">Trivia Game</h3>
         </a>
@@ -77,8 +77,11 @@
     </div>
     <div class="row">
       <div class="column">
-        <img
-          src="./Images/Coming Soon.jpg">
+        <a href="https://burtonpinckney.github.io/giphy/">
+        <img class="portimage"
+          src="./Images/Gif Image.jpg">
+          <h3 class="portlabel">GifTastic!</h3>
+        </a>
       </div>
       <div class="column">
       </div>
