Added Bamazon to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,31 +46,27 @@
     <div class="row">
       <div class="column">
         <a href="https://burtonpinckney.github.io/HW3/">
-          <img class="portimage"
-            src="./Images/PsychicGameImage.jpg">
-            <h3 class="portlabel">Psychic Game</h3>
+          <img class="portimage" src="./Images/PsychicGameImage.jpg">
+          <h3 class="portlabel">Psychic Game</h3>
         </a>
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/unit-4-game/">
-        <img class="portimage"
-          src="./Images/CrystalGameImage.jpg">
+          <img class="portimage" src="./Images/CrystalGameImage.jpg">
           <h3 class="portlabel">Crystal Game</h3>
         </a>
-        </div>
+      </div>
     </div>
     <div class="row">
       <div class="column">
         <a href="https://burtonpinckney.github.io/Project_1A/">
-        <img class="portimage"
-          src="./Images/Volunteer.png">
+          <img class="portimage" src="./Images/Volunteer.png">
           <h3 class="portlabel">Vol Tracker</h3>
         </a>
       </div>
       <div class="column">
         <a href="https://burtonpinckney.github.io/Trivia-game/">
-        <img class="portimage"
-          src="./Images/PantherTrivia.jpg">
+          <img class="portimage" src="./Images/PantherTrivia.jpg">
           <h3 class="portlabel">Trivia Game</h3>
         </a>
       </div>
@@ -78,12 +74,15 @@
     <div class="row">
       <div class="column">
         <a href="https://burtonpinckney.github.io/giphy/">
-        <img class="portimage"
-          src="./Images/Gif Image.jpg">
+          <img class="portimage" src="./Images/Gif Image.jpg">
           <h3 class="portlabel">GifTastic!</h3>
         </a>
       </div>
       <div class="column">
+        <a href="https://github.com/Burtonpinckney/bamazon">
+          <img class="portimage" src="./Images/storefront.jpg">
+          <h3 class="portlabel">Bamazon</h3>
+        </a>
       </div>
     </div>
   </div>
