Added Friend Finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,12 @@
           <h3 class="portlabel">Crystal Game</h3>
         </a>
       </div>
+      <div class="column">
+        <a href="https://glacial-spire-35107.herokuapp.com/">
+          <img class="portimage" src="./Images/FriendFinder.jpg">
+          <h3 class="portlabel">Friend Finder</h3>
+        </a>
+      </div>
     </div>
     <div class="row">
       <div class="column">
