--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,12 @@
           <h3 class="portlabel">Friend Finder</h3>
         </a>
       </div>
+      <div class="column">
+        <a href="https://damp-fortress-45110.herokuapp.com/">
+          <img class="portimage" src="./Images/newspaper.png">
+          <h3 class="portlabel">Mongo Headlines</h3>
+        </a>
+      </div>
     </div>
     <div class="row">
       <div class="column">
@@ -94,6 +100,12 @@
         <a href="https://github.com/Burtonpinckney/bamazon">
           <img class="portimage" src="./Images/storefront.jpg">
           <h3 class="portlabel">Bamazon</h3>
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://awesomeproject2.herokuapp.com/">
+          <img class="portimage" src="./Images/PetConnect.jpg">
+          <h3 class="portlabel">Pet Connect</h3>
         </a>
       </div>
     </div>
