Added Clicky Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,12 @@
           <h3 class="portlabel">Burger</h3>
         </a>
       </div>
+      <div class="column">
+        <a href="https://burtonpinckney.github.io/ClickyGame/">
+          <img class="portimage" src="./Images/mascots.jpg">
+          <h3 class="portlabel">Clicky Game</h3>
+        </a>
+      </div>
     </div>
     <div class="row">
       <div class="column">
