--- a/portfolio.html
+++ b/portfolio.html
@@ -114,6 +114,12 @@
           <h3 class="portlabel">Pet Connect</h3>
         </a>
       </div>
+      <div class="column">
+        <a href="https://fast-ravine-51004.herokuapp.com/">
+          <img class="portimage" src="./Images/RiSStenUp.png">
+          <h3 class="portlabel">RiSStenUp</h3>
+        </a>
+      </div>
     </div>
   </div>
 
