Changes to About page

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -49,7 +49,7 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Bio</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consectetur! Consequatur fuga temporibus aperiam quia deserunt. Tempora ipsa ratione obcaecati explicabo dolor quibusdam, in, animi asperiores nisi numquam dolore id.</p>
+                <p class="card-text">I am a graduate of the University of Charlotte Coding Bootcamp and a Full Stack Web Developer.</p>
             </div>
         </div>
     </div>
