--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
       <div class="card-body">
         <h5 class="card-title">Bio</h5>
         <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
-        <p class="card-text"><img id="headShot" src="./Images/Head shot 25%.jpg" alt=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consectetur! Consequatur
-          fuga temporibus aperiam quia deserunt. Tempora ipsa ratione obcaecati explicabo dolor quibusdam, in, animi
-          asperiores nisi numquam dolore id.</p>
+        <p class="card-text"><img id="headShot" src="./Images/Head shot 25%.jpg" alt=""> Experienced Full Stack Engineer with a 20-year history in the finance industry, along with additional 10-year management history in three different industries. Strong engineering professional with a Coding: Full Stack Web Development Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive on-site full-time 12-week (240 hr) curriculum included front-end and back-end technologies through a dynamic full-stack curriculum: HTML5, CSS3, JavaScript, JQuery, Bootstrap, React.js, Node.js, MongoDB, MySQL, as well as Git. Comfortable working on solo projects or in group collaborations.</p>
       </div>
     </div>
   </div>
