Added Background to About page and improved layout

--- a/index.html
+++ b/index.html
@@ -14,43 +14,59 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Burton Pinckney</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+  <div class="background-container">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+    <div class="stars"></div>
+    <!-- <div class="twinkling"></div> -->
+    <!-- <div class="clouds"></div> -->
 
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand" href="#">Burton Pinckney</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link-light" href="index.html">About||</a>
+          </li>
 
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link-light" href="portfolio.html">Portfolio||</a>
+          </li>
 
-    </div>
-  </nav>
+          <li class="nav-item">
+            <a class="nav-link-light" href="contact.html">Contact </a>
+          </li>
 
+        </ul>
 
-  <div class="container">
-    <div class="card">
-      <div class="card-header">
-        Web Development Student
       </div>
-      <div class="card-body">
-        <h5 class="card-title">Bio</h5>
-        <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
-        <p class="card-text"><img id="headShot" src="./Images/Head shot 25%.jpg" alt=""> Full Stack Engineer with a 20-year history in the finance industry, along with additional 10-year management history in three different industries. Strong engineering professional with a Coding: Full Stack Web Development Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive on-site full-time 12-week (240 hr) curriculum included front-end and back-end technologies through a dynamic full-stack curriculum: HTML5, CSS3, JavaScript, JQuery, Bootstrap, React.js, Node.js, MongoDB, MySQL, as well as Git. Comfortable working on solo projects or in group collaborations.</p>
+    </nav>
+    <div class="container">
+      <div class="card">
+        <div class="card-header">
+          Full Stack Web Developer
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Bio</h5>
+          <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
+          <p class="card-text"><img id="headShot" src="./Images/Head shot 25%.jpg" alt="" class="float-left">Full Stack
+            Web Developer with an extensive background in the finance industry, along with an additional 10-year
+            management history in three different industries. Recently received a Full Stack Web Development | Coding
+            Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive
+            on-site full-time 12-week (240 hr) curriculum including front-end and back-end technologies through a
+            dynamic full-stack curriculum. Comfortable working independently or collaborating in a diverse group
+            setting. Strong interpersonal skills with a growth mindset. Skills: Javascript | Express | Node.js | jQuery
+            |
+            React | GIT | GitHub | MongoDB | MySQL | Handlebars | HTML | CSS | Bootstrap | Media Queries | APIs | Excel
+            | Heroku | Command Line | Word</p>
+        </div>
       </div>
     </div>
   </div>
