Updated info on Contact page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="contact.css">
+
+  
 
 </head>
 
@@ -46,51 +48,22 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="well well-sm">
           <form class="form-horizontal" action="" method="post">
-            <fieldset>
-              <legend class="text-center">Contact us</legend>
-
-              <!-- Name input-->
-              <div class="form-group">
-                <label class="col-md-3 control-label" for="name">Name</label>
-                <div class="col-md-9">
-                  <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-                </div>
-              </div>
-
-              <!-- Email input-->
-              <div class="form-group">
-                <label class="col-md-3 control-label" for="email">Your E-mail</label>
-                <div class="col-md-9">
-                  <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-                </div>
-              </div>
-
-              <!-- Message body -->
-              <div class="form-group">
-                <label class="col-md-3 control-label" for="message">Your message</label>
-                <div class="col-md-9">
-                  <textarea class="form-control" id="message" name="message"
-                    placeholder="Please enter your message here..." rows="5"></textarea>
-                </div>
-              </div>
-
-              <!-- Form actions -->
-              <div class="form-group">
-                <div class="col-md-12 text-right">
-                  <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                </div>
-              </div>
-            </fieldset>
+              <h1>Contact Me:</h1>
+              <br>
+              <h5>Email:</h5>
+              <a href="mailto:mbpinckney@gmail.com">mbpinckney@gmail.com</a>
+              <br>
+              <br>
+              <h5>LinkedIn profile:</h5>
+              <a href="https://www.linkedin.com/in/burton-pinckney-70731b193/">Burton Pinckney's LinkedIn Profile</a>
+              <br>
+              <br>
+              <h5>Phone Number:</h5>
+              <h5>704-301-0310</h5>
           </form>
         </div>
       </div>
     </div>
-  </div>
-
-  <div>
-    <footer class="footer">
-      <f>Copyright</f>
-    </footer>
   </div>
 
 </body>
