Made some changes to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,21 +23,16 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
-
       </ul>
-
     </div>
   </nav>
 
@@ -45,33 +40,13 @@
     <h1>Portfolio</h1>
     <div class="row">
       <div class="column">
-        <a href="https://burtonpinckney.github.io/HW3/">
-          <img class="portimage" src="./Images/PsychicGameImage.jpg">
-          <h3 class="portlabel">Psychic Game</h3>
+        <a href="https://fast-ravine-51004.herokuapp.com/">
+          <img class="portimage" src="./Images/RiSStenUp.png">
+          <h3 class="portlabel">RiSStenUp</h3>
         </a>
       </div>
       <div class="column">
-        <a href="https://burtonpinckney.github.io/unit-4-game/">
-          <img class="portimage" src="./Images/CrystalGameImage.jpg">
-          <h3 class="portlabel">Crystal Game</h3>
-        </a>
-      </div>
-      <div class="column">
-        <a href="https://glacial-spire-35107.herokuapp.com/">
-          <img class="portimage" src="./Images/FriendFinder.jpg">
-          <h3 class="portlabel">Friend Finder</h3>
-        </a>
-      </div>
-      <div class="column">
-        <a href="https://damp-fortress-45110.herokuapp.com/">
-          <img class="portimage" src="./Images/newspaper.png">
-          <h3 class="portlabel">Mongo Headlines</h3>
-        </a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="column">
-        <a href="https://burtonpinckney.github.io/Project_1A/">
+        <a href="https://burtonpinckney.github.io/Volunteer-Tracker/">
           <img class="portimage" src="./Images/Volunteer.png">
           <h3 class="portlabel">Vol Tracker</h3>
         </a>
@@ -83,15 +58,35 @@
         </a>
       </div>
       <div class="column">
+        <a href="https://awesomeproject2.herokuapp.com/">
+          <img class="portimage" src="./Images/PetConnect.jpg">
+          <h3 class="portlabel">Pet Connect</h3>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <a href="https://github.com/Burtonpinckney/bamazon">
+          <img class="portimage" src="./Images/storefront.jpg">
+          <h3 class="portlabel">Bamazon</h3>
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://glacial-spire-35107.herokuapp.com/">
+          <img class="portimage" src="./Images/FriendFinder.jpg">
+          <h3 class="portlabel">Friend Finder</h3>
+        </a>
+      </div>
+      <div class="column">
         <a href="https://lit-anchorage-99441.herokuapp.com/">
           <img class="portimage" src="./Images/Burger.jpg">
           <h3 class="portlabel">Burger</h3>
         </a>
       </div>
       <div class="column">
-        <a href="https://burtonpinckney.github.io/ClickyGame/">
-          <img class="portimage" src="./Images/mascots.jpg">
-          <h3 class="portlabel">Clicky Game</h3>
+        <a href="https://damp-fortress-45110.herokuapp.com/">
+          <img class="portimage" src="./Images/newspaper.png">
+          <h3 class="portlabel">Mongo Headlines</h3>
         </a>
       </div>
     </div>
@@ -103,21 +98,21 @@
         </a>
       </div>
       <div class="column">
-        <a href="https://github.com/Burtonpinckney/bamazon">
-          <img class="portimage" src="./Images/storefront.jpg">
-          <h3 class="portlabel">Bamazon</h3>
+        <a href="https://burtonpinckney.github.io/unit-4-game/">
+          <img class="portimage" src="./Images/CrystalGameImage.jpg">
+          <h3 class="portlabel">Crystal Game</h3>
         </a>
       </div>
       <div class="column">
-        <a href="https://awesomeproject2.herokuapp.com/">
-          <img class="portimage" src="./Images/PetConnect.jpg">
-          <h3 class="portlabel">Pet Connect</h3>
+        <a href="https://burtonpinckney.github.io/ClickyGame/">
+          <img class="portimage" src="./Images/mascots.jpg">
+          <h3 class="portlabel">Clicky Game</h3>
         </a>
       </div>
       <div class="column">
-        <a href="https://fast-ravine-51004.herokuapp.com/">
-          <img class="portimage" src="./Images/RiSStenUp.png">
-          <h3 class="portlabel">RiSStenUp</h3>
+        <a href="https://burtonpinckney.github.io/HW3/">
+          <img class="portimage" src="./Images/PsychicGameImage.jpg">
+          <h3 class="portlabel">Psychic Game</h3>
         </a>
       </div>
     </div>
