Changed up portfolio page background and set up

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link-light" href="portfolio.html">Portfolio||</a>
+            <a class="nav-link-light" href="portfolio1.html">Portfolio||</a>
           </li>
 
           <li class="nav-item">
