--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
   </nav>
 
   <div class="container">
-    <h1>Portfolio</h1>
+    <h1>Burton Pinckney's Portfolio</h1>
     <div class="row">
       <div class="column">
         <a href="https://fast-ravine-51004.herokuapp.com/">
