Added alt for head shot for any bugs

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h5 class="card-title">Bio</h5>
           <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
-          <p class="card-text"><img id="headShot" src="./Images/HeadShot25%.jpg" alt="" class="float-left">Full Stack
+          <p class="card-text"><img id="headShot" src="./Images/HeadShot25%.jpg" alt="Head Shot Image" class="float-left">Full Stack
             Web Developer with an extensive background in the finance industry, along with an additional 10-year
             management history in three different industries. Recently received a Full Stack Web Development | Coding
             Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive
