--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h5 class="card-title">Bio</h5>
           <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
           <p class="card-text"><img id="headShot" src="./Images/HeadShot.jpg" alt="Head Shot Image" class="float-left">Full Stack
-            Web Developer with an extesive background in the finance industry, along with an additional 10-year
+            Web Developer with an extensive background in the finance industry, along with an additional 10-year
             management history in three different industries. Recently received a Full Stack Web Development | Coding
             Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive
             on-site full-time 12-week (240 hr) curriculum including front-end and back-end technologies through a
