Removed bugged bio pic, highlighted technical skills

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         <div class="card-body">
           <h5 class="card-title">Bio</h5>
           <!-- <img src="./Images/Head shot 25%.jpg" alt=""> -->
-          <p class="card-text"><img id="headShot" src="./Images/HeadShot.jpg" alt="Head Shot Image" class="float-left">Full Stack
+          <p class="card-text">Full Stack
             Web Developer with an extensive background in the finance industry, along with an additional 10-year
             management history in three different industries. Recently received a Full Stack Web Development | Coding
             Certificate focused in Computer Programming from University of North Carolina at Charlotte. An intensive
             on-site full-time 12-week (240 hr) curriculum including front-end and back-end technologies through a
             dynamic full-stack curriculum. Comfortable working independently or collaborating in a diverse group
-            setting. Strong interpersonal skills with a growth mindset. Skills: Javascript | Express | Node.js | jQuery
-            |
-            React | GIT | GitHub | MongoDB | MySQL | Handlebars | HTML | CSS | Bootstrap | Media Queries | APIs | Excel
+            setting. Strong interpersonal skills with a growth mindset.</p>
+            <h5>Technical Skills:</h5>
+            <p>Javascript | Express | Node.js | jQuery | React | GIT | GitHub | MongoDB | MySQL | Handlebars | HTML | CSS | Bootstrap | Media Queries | APIs | Excel
             | Heroku | Command Line | Word</p>
         </div>
       </div>
