Added Github/ReadMe to Trivia Game

--- a/portfolio1.html
+++ b/portfolio1.html
@@ -61,6 +61,9 @@
               <img class="portimage" src="./Images/PantherTrivia.jpg">
               <h4 class="portlabel">Trivia Game</h4>
             </a>
+            <a href="https://github.com/Burtonpinckney/Trivia-game">
+              <h6 class="portlabel">Github/ReadMe</h6>
+            </a>
           </div>
           <div class="column">
             <a href="https://awesomeproject2.herokuapp.com/">
