--- a/portfolio1.html
+++ b/portfolio1.html
@@ -70,6 +70,9 @@
               <img class="portimage" src="./Images/PetConnect.jpg">
               <h4 class="portlabel">Pet Connect</h4>
             </a>
+            <a href="https://github.com/Burtonpinckney/Pet-Connect">
+              <h6 class="portlabel">Github/ReadMe</h6>
+            </a>
           </div>
         </div>
         <div class="row">
