--- a/portfolio1.html
+++ b/portfolio1.html
@@ -81,6 +81,9 @@
               <img class="portimage" src="./Images/storefront.jpg">
               <h4 class="portlabel">Bamazon</h4>
             </a>
+            <a href="https://github.com/Burtonpinckney/bamazon">
+              <h6 class="portlabel">Github/ReadMe</h6>
+            </a>
           </div>
           <div class="column">
             <a href="https://glacial-spire-35107.herokuapp.com/">
