Added Github/ReadME to FriendFinder

--- a/portfolio1.html
+++ b/portfolio1.html
@@ -81,7 +81,7 @@
               <img class="portimage" src="./Images/storefront.jpg">
               <h4 class="portlabel">Bamazon</h4>
             </a>
-            <a href="https://github.com/Burtonpinckney/bamazon">
+            <a href="https://burtonpinckney.github.io/bamazon/">
               <h6 class="portlabel">Github/ReadMe</h6>
             </a>
           </div>
@@ -89,6 +89,9 @@
             <a href="https://glacial-spire-35107.herokuapp.com/">
               <img class="portimage" src="./Images/FriendFinder.jpg">
               <h4 class="portlabel">Friend Finder</h4>
+            </a>
+            <a href="https://github.com/Burtonpinckney/FriendFinder">
+              <h6 class="portlabel">Github/ReadMe</h6>
             </a>
           </div>
           <div class="column">
